Fix footer. Fix overflow?

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -3,18 +3,16 @@
 
 $footer-height: 60px
 
-html, body
+html
   height: 100%
+body
   min-height: 100%
+  position: relative
 
 footer.footer
   position: absolute
   bottom: 0
   width: 100%
-  height: $footer-height
 
 div#app
-  margin-bottom: 8$footer-height
-
-body, button, input, select, textarea
-  font-family: Arial
+  margin-bottom: 250px // actual footer size in the browser
