--- a/src/styles/theme-day.sass
+++ b/src/styles/theme-day.sass
@@ -1,5 +1,12 @@
 html.theme-day
   @import "bulma"
 
+  body, button, input, select, textarea
+    font-family: Arial
+
+  .tag
+    background-color: inherit !important
+    border: 1px solid hsl(0, 0%, 96%)
+
   .notification.overrideVueNotificationsIssue
     background-color: #f5f5f5
